Modified CI to run on main branch

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 on:
   push:
-    branches: [master]
+    branches: ["master", "main"]
     tags: ["v*"]
   pull_request:
-    branches: [master]
+    branches: ["master", "main"]
   workflow_call: {}
 
 jobs:
