--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: ["master", "main"]
     tags: ["v*"]
   pull_request:
-    branches: [master]
+    branches: ["master", "main"]
 
 jobs:
   test:
@@ -42,7 +42,7 @@ jobs:
     needs: test
     if: (
         (github.event_name == 'pull_request' && github.actor != 'dependabot[bot]') ||
-        (github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master'))
+        (github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')))
       )
     steps:
       - name: Checkout commit
@@ -69,7 +69,7 @@ jobs:
           export IMAGE_TAG=$(echo "${BRANCH_NAME}" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9_.-]/-/g')
           make hook-push-image
       - name: Release development image
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
         run: |
           export IMAGE_TAG=master
           make hook-push-image
