--- a/charts/n8n/templates/service.webhook.yaml
+++ b/charts/n8n/templates/service.webhook.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "n8n.labels" . | nindent 4 }}
+    {{- with .Values.webhook.service.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+
   {{- with .Values.webhook.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
