--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -40,6 +40,7 @@ spec:
         {{- if .Values.main.podLabels }}
           {{ toYaml .Values.main.podLabels | nindent 8 }}
         {{- end }}
+        {{- include "n8n.apoloPodLabels" .Values.main | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
