--- a/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
+++ b/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
@@ -480,6 +480,92 @@
       "x-title": "SQLite Database",
       "x-type": "SQLiteDatabase"
     },
+    "ValkeyConfig": {
+      "properties": {
+        "preset": {
+          "$ref": "#/$defs/Preset"
+        },
+        "architecture": {
+          "anyOf": [
+            {
+              "$ref": "#/$defs/ValkeyStandaloneArchitecture"
+            },
+            {
+              "$ref": "#/$defs/ValkeyReplicationArchitecture"
+            }
+          ],
+          "title": "Architecture"
+        }
+      },
+      "required": [
+        "preset",
+        "architecture"
+      ],
+      "title": "ValkeyConfig",
+      "type": "object",
+      "x-description": "",
+      "x-is-advanced-field": false,
+      "x-meta-type": "inline",
+      "x-title": "Valkey/Redis Configuration",
+      "x-type": "ValkeyConfig"
+    },
+    "ValkeyReplicationArchitecture": {
+      "properties": {
+        "architecture_type": {
+          "const": "replication",
+          "title": "Architecture Type",
+          "type": "string"
+        },
+        "replica_preset": {
+          "$ref": "#/$defs/Preset"
+        },
+        "autoscaling": {
+          "anyOf": [
+            {
+              "$ref": "#/$defs/AutoscalingHPA"
+            },
+            {
+              "type": "null"
+            }
+          ],
+          "default": null,
+          "x-description": "Enable Autoscaling and configure it.",
+          "x-is-advanced-field": true,
+          "x-meta-type": "inline",
+          "x-title": "Autoscaling"
+        }
+      },
+      "required": [
+        "architecture_type",
+        "replica_preset"
+      ],
+      "title": "ValkeyReplicationArchitecture",
+      "type": "object",
+      "x-description": "This mode will deploy a Valkey\n                    primary StatefulSet and a Valkey replicas StatefulSet.\n                    The replicas will be read-replicas of the primary and\n                    two services will be exposed",
+      "x-is-advanced-field": false,
+      "x-meta-type": "inline",
+      "x-title": "Replication Mode",
+      "x-type": "ValkeyReplicationArchitecture"
+    },
+    "ValkeyStandaloneArchitecture": {
+      "properties": {
+        "architecture_type": {
+          "const": "standalone",
+          "title": "Architecture Type",
+          "type": "string"
+        }
+      },
+      "required": [
+        "architecture_type"
+      ],
+      "title": "ValkeyStandaloneArchitecture",
+      "type": "object",
+      "x-description": "This mode wiill deploy a standalone\n                    Valkey StatefulSet. A single service will be exposed",
+      "x-is-advanced-field": false,
+      "x-meta-type": "inline",
+      "x-title": "Standalone Mode",
+      "x-type": "ValkeyStandaloneArchitecture"
+    },
     "WebhookConfig": {
       "properties": {
         "preset": {
@@ -565,6 +651,9 @@
     "webhook_config": {
       "$ref": "#/$defs/WebhookConfig"
     },
+    "valkey_config": {
+      "$ref": "#/$defs/ValkeyConfig"
+    },
     "networking": {
       "$ref": "#/$defs/BasicNetworkingConfig",
       "x-description": "Configure network access, HTTP authentication, and related connectivity options."
@@ -577,6 +666,7 @@
     "main_app_config",
     "worker_config",
     "webhook_config",
+    "valkey_config",
     "database_config"
   ],
   "title": "N8nAppInputs",
