--- a/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
+++ b/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
@@ -517,7 +517,9 @@
           "type": "string"
         },
         "replica_preset": {
-          "$ref": "#/$defs/Preset"
+          "$ref": "#/$defs/Preset",
+          "x-description": "",
+          "x-title": "Replica Preset"
         },
         "autoscaling": {
           "anyOf": [
