Removed OpenWebUI references

--- a/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
+++ b/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
@@ -302,7 +302,7 @@
             }
           ],
           "title": "Database",
-          "x-description": "Configure the database for OpenWebUI. Choose between local SQLite or Postgres.",
+          "x-description": "Configure the database for n8n. Choose between local SQLite or Postgres.",
           "x-is-advanced-field": false,
           "x-meta-type": "inline",
           "x-title": "Database Configuration"
@@ -310,7 +310,7 @@
       },
       "title": "DataBaseConfig",
       "type": "object",
-      "x-description": "Configure the database for OpenWebUI.",
+      "x-description": "Configure the database for n8n.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "Database Configuration",
@@ -412,7 +412,7 @@
       ],
       "title": "PostgresDatabase",
       "type": "object",
-      "x-description": "Use a Postgres database for OpenWebUI.",
+      "x-description": "Use a Postgres database for n8n.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "Postgres Database",
@@ -474,7 +474,7 @@
       },
       "title": "SQLiteDatabase",
       "type": "object",
-      "x-description": "Use a local SQLite database for OpenWebUI.",
+      "x-description": "Use a local SQLite database for n8n.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "SQLite Database",
