--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -94,3 +94,14 @@ jobs:
       - name: Run integration tests
         run: make hook-test-integration
 
+  check:
+    name: Check
+    needs:
+      - lint
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
