Updated sections descriptions

--- a/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
+++ b/.apolo/src/apolo_apps_n8n/schemas/N8nAppInputs.json
@@ -375,7 +375,7 @@
       ],
       "title": "MainApplicationConfig",
       "type": "object",
-      "x-description": "",
+      "x-description": "Configure the primary n8n service that handles core workflow automation functionality, processes workflows, and manages the user interface.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "Main Application Configuration",
@@ -608,7 +608,7 @@
       ],
       "title": "WebhookConfig",
       "type": "object",
-      "x-description": "",
+      "x-description": "Configure dedicated webhook processing instances. Separating webhook handling allows dedicated resource allocation for webhook traffic without competing with core workflow execution.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "Webhook Configuration",
@@ -630,7 +630,7 @@
       ],
       "title": "WorkerConfig",
       "type": "object",
-      "x-description": "",
+      "x-description": "Configure workers for distributed background job processing. Workers handle workflow execution tasks, enabling the main application to remain responsive by offloading computational work.",
       "x-is-advanced-field": false,
       "x-meta-type": "inline",
       "x-title": "Worker Configuration",
