Removed default volumeMount when persistence is enabled

--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -95,9 +95,13 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.main.resources | nindent 12 }}
+          {{- if not .Values.main.useApoloStorage }}
           volumeMounts:
             - name: data
               mountPath: /home/node/.n8n
+          {{- else }}
+          volumeMounts: []
+          {{- end }}
           {{- if .Values.main.extraVolumeMounts }}
             {{- toYaml .Values.main.extraVolumeMounts | nindent 12 }}
           {{- end }}
