MLO-486: Initial commit for Apolo app integration (#1)
* Initial commit for Apolo app integration

* Modified CI to run on main branch

* Added .python-version

* Fixed lint issues

* Removed __pycache__ dir

* Disabled conventional-commit workflow

* Added apolo labels + config for main, worker and webhook

* Updated chart version to Apolo format

* Added autoscaling config

* Added Redis config + integration tests

* Added helm dependency build step to integration tests

* Fixed linting issues

* Added application tags

* Deleted MLFlow logo

* Fixed application image and helm chart references

* Changed image to bitnamilegacy

* Fixed valkey image values

* added missing apolo application label

* Fixed type in outputs_processor

* Added default labels app to values.yaml

* Removed OpenWebUI references

* Removed test stubs

* Update .apolo/applications.yaml short description

Co-authored-by: Yevhenii Semendiak <semendyak@gmail.com>

* Update .apolo/applications.yaml pub_date

Co-authored-by: Yevhenii Semendiak <semendyak@gmail.com>

* Removing coverage and pytest files

* Sync hook docker image with .python-version file

* Added final check in `tests.yaml` workflow

* Replaced `preset_to*` functions by `get_component_values`

* Removed unused autoscaling option for worker and webhook

* Fixed integration tests and updated autoscaling description

* Updated sections descriptions

* Updated n8n documentation link

* Removed APOLO_APP_TYPE definition

* Updated main app replica description + removed advanced field config

* Added missing value to disable valkey replicas count when autoscaler is
being used

* Added logo and banner

* Added apolo storage to main pod

* Removed default volumeMount when persistence is enabled

* Fixed image tag

* Added apolo documentation link

* Removed chart version testing + disabled some upstream workflows

* Fixed split string formatting

---------

Co-authored-by: Yevhenii Semendiak <semendyak@gmail.com>

--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -40,6 +40,7 @@ spec:
         {{- if .Values.main.podLabels }}
           {{ toYaml .Values.main.podLabels | nindent 8 }}
         {{- end }}
+        {{- include "n8n.apoloPodLabels" .Values.main | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -94,9 +95,13 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.main.resources | nindent 12 }}
+          {{- if not .Values.main.useApoloStorage }}
           volumeMounts:
             - name: data
               mountPath: /home/node/.n8n
+          {{- else }}
+          volumeMounts: []
+          {{- end }}
           {{- if .Values.main.extraVolumeMounts }}
             {{- toYaml .Values.main.extraVolumeMounts | nindent 12 }}
           {{- end }}
